--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,40 +1,55 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash # Remove or comment out this line to display the site sidebar on this page.
-hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+title: Calinéo
+description: Plateforme de mise en relation entre parents et professionnels de la petite enfance.
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+<div style="display: flex; align-items: center; justify-content: space-between; gap: 2rem;">
+    <h1 style="margin: 0;">
+      Calinéo
+    </h1>
+    <img
+      src="/logo_02.png"
+      alt="Logo Calinéo"
+      width="160"
+    />
+</div>
 
-## Next steps
+**Calinéo** est une application mobile conçue pour faciliter la mise en relation entre **parents** et **professionnels de la petite enfance**, notamment les assistantes maternelles.
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Change page layout" icon="document">
-		Delete `template: splash` in `src/content/docs/index.mdx` to display a
-		sidebar on this page.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+L’objectif est simple : permettre aux familles de trouver rapidement des professionnels disponibles à proximité, et d’échanger facilement via une messagerie intégrée.
+
+---
+
+## Fonctionnalités principales
+
+- 🔍 Recherche de professionnels par **géolocalisation**
+- 💬 **Messagerie instantanée privée**
+- 📍 Mise en relation locale, simple et directe
+- 🔒 Respect de la vie privée et des données personnelles
+
+---
+
+## À qui s’adresse Calinéo ?
+
+- Aux **parents** à la recherche d’un mode de garde
+- Aux **assistantes maternelles** souhaitant être visibles localement
+- Aux professionnels de la petite enfance en général
+
+---
+
+## Statut du projet
+
+Calinéo est actuellement en cours de déploiement.
+Certaines fonctionnalités pourront évoluer ou être ajoutées progressivement.
+
+---
+
+## Informations légales
+
+- [Mentions légales](/legal/mentions-legales)
+- [Conditions Générales d’Utilisation](/legal/conditions-utilisation)
+- [Politique de confidentialité](/legal/politique-confidentialite)
+
+---
+
+📧 **Contact** : [equipe@calineo.app](mailto:equipe@calineo.app)
